--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://shortpoet.com/assets/website_landing.png"/>
+    <meta property="og:title" content="Carlos-Soriano"/>
+    <meta property="og:description" content="Carlos Soriano's Resume and Blog."/>
+
+    <link rel="icon" href="/favicon.ico">
     <title>Carlos-Soriano</title>
+
   </head>
   <body>
+    <noscript>
+      <strong>🤷‍♂️ but Carlos-Soriano doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
