--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,12 @@
     <meta property="og:title" content="Carlos-Soriano"/>
     <meta property="og:description" content="Carlos Soriano's Resume and Blog."/>
 
+    <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
+
     <link rel="icon" href="/favicon.ico">
     <title>Carlos-Soriano</title>
 
