--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,11 @@
     <meta property="og:title" content="Carlos-Soriano"/>
     <meta property="og:description" content="Carlos Soriano's Resume and Blog."/>
 
-    <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
+    <meta property="og:image:secure_url" content="https://secure.shortpoet.com/assets/website_landing.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1084" />
+    <meta property="og:image:height" content="1018" />
+    <meta property="og:image:alt" content="A screenshot of the landing page for Carlos Soriano's Resume and Blog." />
 
     <link rel="icon" href="/favicon.ico">
     <title>Carlos-Soriano</title>
