--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/assets/website_landing.png"/>
+    <meta property="og:image" content="https://shortpoet.com/assets/github_profile_pic.png"/>
+    <meta property="og:image" content="https://shortpoet.com/assets/website_landing.png"/>
     <meta property="og:title" content="Carlos-Soriano"/>
     <meta property="og:description" content="Carlos Soriano's Resume and Blog."/>
 
