--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://shortpoet.com" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://shortpoet.com/public/shortpoet_open_graph.png"/>
     <meta property="og:image:secure_url" content="https://secure.shortpoet.com/public/shortpoet_open_graph.png" />
     <meta property="og:image:type" content="image/png" />
