--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta name="description" content="Carlos Soriano's Resume and Blog. Through living, studying and, working internationally,
+    <!-- <meta name="description" content="Carlos Soriano's Resume and Blog. Through living, studying and, working internationally,
     I have developed an expertise in language and culture. Considering where spoken languages intersect with data got me interested in programming.
     Software engineering is translating business requirements into solutions.
     I apply my advanced tech skills to analyses that consider where culture and computation converge. This, combined with my fluency
@@ -51,7 +51,7 @@
     <meta name="twitter:title" content="Carlos-Soriano" />
     
     <link rel="icon" href="/favicon.ico">
-    <title>Carlos-Soriano</title>
+    <title>Carlos-Soriano</title> -->
 
   </head>
   <body>
